# contacthop

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  NOTICE  README.md  alembic.ini  demo.env  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: echo_agent.py
src/contacthop/: __init__.py  cli.py  config.py  main.py  mcp_server.py
src/contacthop/api/: deps.py
src/contacthop/api/routes/: agents.py  contacts.py  conversations.py  dashboard.py  deliveries.py  memory.py
src/contacthop/api/webhooks/: email_inbound.py  twilio_common.py  twilio_sms.py  twilio_voice.py
src/contacthop/channels/: base.py
src/contacthop/channels/email/: console.py  smtp.py
src/contacthop/channels/sms/: console.py  twilio.py
src/contacthop/channels/voice/: console.py  twilio_call.py
src/contacthop/db/: migrate.py  session.py
src/contacthop/db/migrations/: env.py
src/contacthop/db/migrations/versions/: 1022d2d38749_agent_delivery_outbox.py  360818341447_agents_and_tenant_scoping.py  708a479e142c_initial_schema.py  8639bf20aaf3_add_opted_out_to_channel_identities.py  d8985d024e68_unique_channel_identity_address.py
src/contacthop/domain/: enums.py  models.py  schemas.py
src/contacthop/memory/: stats.py  store.py  transcript.py
src/contacthop/orchestrator/: consent.py  conversation.py  escalation.py  notifier.py  policy.py  scheduler.py  voice.py  windows.py
src/contacthop/outbound/: formatting.py  gateway.py  guard.py  limits.py
src/contacthop/sdk/: __init__.py  agent.py  client.py
src/contacthop/static/: dashboard.html
tests/: conftest.py  test_api.py  test_consent.py  test_dashboard.py  test_escalation.py  test_falkordb.py  test_guard.py  test_mcp.py  test_memory.py  test_memory_store.py  test_migrations.py  test_notifier.py  test_phase2.py  test_policy.py  test_read_your_writes.py  test_sdk.py  test_security.py  test_tenancy.py  test_twilio.py  test_voice.py  test_windows.py
