[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contacthop"
version = "0.1.0"
description = "Agentic communication harness: one continuous AI conversation across SMS, email, and voice."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Collin Paran" }]
keywords = ["ai", "agents", "sms", "email", "voice", "twilio", "communication"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
falkordb = ["falkordb>=1.0"]
mcp = ["mcp>=1.2"]

[project.scripts]
contacthop = "contacthop.cli:main"

[project.urls]
Homepage = "https://github.com/contacthop/contacthop"
Repository = "https://github.com/contacthop/contacthop"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "mcp>=1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/contacthop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Alembic autogenerated revisions aren't hand-formatted.
"src/contacthop/db/migrations/versions/*" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["contacthop"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "falkordb.*"
ignore_missing_imports = true
